# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import annotationsRouter from "./annotations";
+import tagsRouter from "./tags";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(annotationsRouter);
+router.use(tagsRouter);
 
 export default router;
